js/js.translator/testData/incremental/invalidation/moveExportedCallableBetweenModules/lib1/l1.0.kt
package sample

@JsExport
fun foo(): Int = 0
